# ros2-audio-tone-recognition

./: .gitignore  README.md  style.csv  tone.csv
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RUNNING.md
ros2_ws/src/prosody2policy_adapter/: package.xml  setup.py
ros2_ws/src/prosody2policy_adapter/prosody2policy_adapter/: mode_logic.py  tone_to_style_node.py
ros2_ws/src/prosody2policy_adapter/test/: test_mode_logic.py
ros2_ws/src/prosody2policy_bringup/: package.xml  setup.py
ros2_ws/src/prosody2policy_bringup/config/: adapter.yaml  tone.yaml
ros2_ws/src/prosody2policy_bringup/launch/: demo.launch.py
ros2_ws/src/prosody2policy_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/prosody2policy_msgs/msg/: StyleParams.msg  ToneSignal.msg
ros2_ws/src/prosody2policy_tone/: package.xml  setup.py
ros2_ws/src/prosody2policy_tone/prosody2policy_tone/: audio_stream.py  streaming_estimator.py  tone_stream_node.py  vad.py
ros2_ws/src/prosody2policy_tone/prosody2policy_tone/models/: __init__.py  base.py  heuristic_prosody.py  hf_wav2vec2.py
tools/: calibrate_confidence.py  eval_adapter.py  log_tone_csv.py  replay_tone_csv.py  sim_adapter.py
