<?xml version="1.0"?>
<package format="3">
  <name>prosody2policy_bringup</name>
  <version>0.1.0</version>
  <description>Launch + configs to bring up tone perception and adapter nodes.</description>
  <maintainer email="marcsylvestre100@gmail.com">sansan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>prosody2policy_tone</exec_depend>
  <exec_depend>prosody2policy_adapter</exec_depend>
</package>
