<?xml version="1.0"?>
<package format="3">
  <name>prosody2policy_tone</name>
  <version>0.1.0</version>
  <description>Streaming prosody (tone) publisher for ROS2.</description>
  <maintainer email="you@example.com">sansan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>prosody2policy_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
</package>
